--- a/index.html
+++ b/index.html
@@ -6,24 +6,29 @@
 </head>
 <body>
 
-</body>
-</html>
+<h1 class="heading">Crystal Collectors</h1>
+<div  class="directions">
+	<p> sdkjfaskfdjasfj</p>
+	
+</div>
 
+<div id="random-number"></div>
 
-	<div id="random-number">
-    	
-    </div>
+<div id="wins-losses-tracker-box"></div>	
 
-    <div id="images">
+ <div id="images">
     	<img id= "img1">
     	<img id= "img2">
     	<img id= "img3">
     	<img id= "img4">
 
-    </div>
+ </div>
 
   
+<div id="score-square">
+</div>
 
+<div id="score-tracker"></div>
 
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -37,7 +42,7 @@
 
    	var count = 0;
    	var crystalNUmberArray = [];
-   	var sum = "", 
+   	var sum = ""; 
    	var img1 = crystalNUmberArray[0];
    	var img2 = crystalNUmberArray[0];
    	var img3 = crystalNUmberArray[0];
@@ -68,11 +73,6 @@
 
 		}
 
-	// var img1 = $("#img1").attr("value", getRandomIntInclusive(1, 12));
-	// var img2 = $("#img2").attr("value", getRandomIntInclusive(1, 12));
-	// var img3 = $("#img3").attr("value", getRandomIntInclusive(1, 12));
-	// var img4 = $("#img4").attr("value", getRandomIntInclusive(1, 12));
-
 
 
 
@@ -91,3 +91,8 @@
 	
  	}
 </script>
+</body>
+</html>
+
+
+	
