--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div id="win-lose"></div>
 
-<div id="wins-losses-tracker-box">
+<!-- <div id="wins-losses-tracker-box"> -->
 	<div>
         <h3>Wins: </h3>
         <span id="wins"></span>
@@ -40,7 +40,7 @@
         <h3>Losses: </h3>
         <span id="losses"></span>
       </div>
-</div>	
+<!-- </div> -->	
 
  <div id="crystals">
 	 <nav class="navbar navbar-default">
@@ -79,7 +79,8 @@
 
 	<script type="text/javascript">
 
-   	
+   	var wins = 0;
+   	var losses = 0;
    	var count = 0;
    	var crystalNUmberArray = [];
    	var crystalNum = ""; 
